@@ -2,7 +2,7 @@ name := "phoenix-scala"
 
 version := "1.0"
 
-scalaVersion := "2.11.6"
+scalaVersion := "2.11.7"
 
 scalacOptions ++= List(
   "-encoding", "UTF-8",
@@ -18,10 +18,10 @@ scalacOptions ++= List(
 mainClass in Compile := Some("Main")
 
 libraryDependencies ++= {
-  val akkaV       = "2.3.10"
+  val akkaV       = "2.3.11"
   val akkaStreamV = "1.0-RC2"
-  val akkaHttpV = "1.0-RC3"
-  val scalaTestV  = "2.2.4"
+  val akkaHttpV   = "1.0-RC4"
+  val scalaTestV  = "2.2.5"
   Seq(
     "com.wix"           %% "accord-core"                          % "0.4.2",
     "com.typesafe.akka"      %% "akka-slf4j"          % akkaV,
@@ -36,7 +36,7 @@ libraryDependencies ++= {
     "ch.qos.logback"     % "logback-classic" % "1.1.3",
     "org.postgresql"    % "postgresql" % "9.3-1100-jdbc41",
     "org.json4s"         %% "json4s-jackson" % "3.2.11",
-    "org.scalactic"     %% "scalactic"                            % "2.2.4",
+    "org.scalactic"     %% "scalactic"                            % "2.2.5",
     "org.flywaydb"      %  "flyway-core"      % "3.2.1",
     "com.stripe"        %  "stripe-java"    %  "1.31.0",
 
@@ -67,3 +67,6 @@ Revolver.settings
 parallelExecution in Test := false
 
 fork in Test := true
+
+javaOptions in Test ++= Seq("-Xmx2G", "-XX:+UseConcMarkSweepGC")
+
